# python-project-49

./: .gitignore  README.md  pyproject.toml
brain_games/: choose_game.py  cli.py  execute_game.py  play_all_games.py  play_game.py  play_one_game.py  start_all_games.py  start_one_game.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: all_games.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
