[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Small collection of 5 mathematical mini-games"
classifiers = ["Topic :: Games/Entertainment"]
repository = "https://github.com/dmkael/python-project-49"
authors = ["dmkael <tanmaar@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:is_even"
brain-calc = "brain_games.scripts.brain_calc:calculate"
brain-gcd = "brain_games.scripts.brain_gcd:find_gcd"
brain-progression = "brain_games.scripts.brain_progression:progression"
brain-prime = "brain_games.scripts.brain_prime:is_prime"
brain-start = "brain_games.scripts.all_games:main"
